--- a/skil.html
+++ b/skil.html
@@ -11,7 +11,7 @@
      <nav class="navbar">
         <div class="navbar-nav">
             <ul>
-                <li><a href="beranda.html">Beranda</a></li>
+                <li><a href="index.html">Beranda</a></li>
                 <li><a href="tentang.html">Tentang</a></li>
                 <li><a href="">Skil</a></li>
                 <li><a href="kontak.html">Kontak</a></li>
