--- a/tentang.html
+++ b/tentang.html
@@ -11,7 +11,7 @@
      <nav class="navbar">
         <div class="navbar-nav">
             <ul>
-                <li><a href="beranda.html">Beranda</a></li>
+                <li><a href="index.html">Beranda</a></li>
                 <li><a href="">Tentang</a></li>
                 <li><a href="skil.html">Skil</a></li>
                 <li><a href="kontak.html">Kontak</a></li>
@@ -24,7 +24,7 @@
         <div class="content-t">
             <h2>Tentang</h2>
             <p>Halo! Nama saya Adhitya Habibi, seorang pelajar SMK jurusan Teknik Komputer dan Jaringan (TKJ). Saat ini, saya sedang menempuh pendidikan di SMK dan memiliki minat yang besar dalam bidang teknologi, terutama yang berkaitan dengan jaringan komputer dan sistem informasi. Selama menempuh pendidikan, saya telah mempelajari berbagai keterampilan teknis seperti instalasi dan konfigurasi jaringan, administrasi sistem, serta perawatan perangkat keras dan lunak. Saya juga aktif mengikuti berbagai pelatihan dan workshop untuk meningkatkan kemampuan saya di bidang IT. Selain kegiatan akademis, saya juga menikmati mengikuti perkembangan teknologi terbaru dan sering mencoba berbagai proyek kecil untuk mengasah keterampilan saya. Saya berharap dapat terus berkembang dan berkontribusi di dunia teknologi informasi di masa depan.</p>
-            <img src="/img/tentang.jpg" alt="" height="350" width="350">
+            <img src="img/tentang.jpg" alt="" height="350" width="350">
         </div>
     </div>
     
