--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <div class="content">
         <div class="content-b">
             <p>Halo<br><span>Saya Habibi</span></p>
-            <img src="/img/profile.jpg" alt="" height="250" width="250">
+            <img src="img/profile.jpg" alt="" height="250" width="250">
         </div>
     </div>
 
