--- a/tentang.html
+++ b/tentang.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Profile</title>
-    <link rel="stylesheet" href="/css/tentang.css">
+    <link rel="stylesheet" href="css/tentang.css">
 </head>
 <body>
     <!-- navbar -->
